@@ -1,0 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>rsyslog documentation</title>
+  <meta http-equiv="refresh" content="0; url=doc/">
+  <link rel="canonical" href="doc/">
+</head>
+<body>
+  <p>Redirecting to <a href="doc/">rsyslog documentation</a>…</p>
+</body>
+</html>
